--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     color: #2E86C1;
     background-color: #D6EAF8;
     background-image: url("bg.png");
+    background-size: cover;
 }
 
 .stButton>button {
